<resources>
	<string name="app_name">FormValidationSaripaarLibrary</string>
	<string name="name">Name</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="phone">Phone</string>
	<string name="alpha_numeric">Alpha Numeric (Max Length 12)</string>
	<string name="submit">Submit</string>
	<string name="confirm_email">Confirm Email</string>
	<string name="terms_and_conditions">I agree to the terms and conditions</string>
	<string name="max_value">Max Value (10)</string>
	<string name="min_value">Min Value(2)</string>
	<string name="value_range">Value between 2 and 10</string>
	<string name="first_field">First field to verify</string>
</resources>
